tests/mut_case_wildcard_flow.test
let f = fun x -> match x with
| `A (`B _) -> 0
| y -> y + 1;
f (`C 0)
####
TypeError: Value is required to have type int by the + operator expression here:
let f = fun x -> match x with
| `A (`B _) -> 0
| y -> y + 1;
       ^      
f (`C 0)
However, that value may be a variant here:
| `A (`B _) -> 0
| y -> y + 1;
f (`C 0)
   ^~    
Hint: To narrow down the cause of the type mismatch, consider adding an explicit type annotation here:
let f = fun x: _ -> match x with
             +++                 
| `A (`B _) -> 0
| y -> y + 1;
